--- a/src/app/issue-list/issue-list.component.html
+++ b/src/app/issue-list/issue-list.component.html
@@ -1,5 +1,5 @@
-<ng-container *ngIf="showReportIssue === false">
-  <button class="btn btn-primary" (click)="showReportIssue = true">Add new issue</button>
+<ng-container *ngIf="showComponent === 'list' || showComponent === 'dialog'">
+  <button class="btn btn-primary" (click)="showComponent = 'new'">Add new issue</button>
   <clr-datagrid>
     <clr-dg-column [clrDgField]="'issueNo'" [clrDgColType]="'number'">Issue No</clr-dg-column>
     <clr-dg-column [clrDgField]="'type'">Type</clr-dg-column>
@@ -8,7 +8,8 @@
     <clr-dg-column [clrDgField]="'priority'">Priority</clr-dg-column>
     <clr-dg-row *clrDgItems="let issue of issues">
       <clr-dg-action-overflow>
-        <button class="action-item" (click)="selectedIssue = issue">Resolve</button>
+        <button class="action-item" (click)="selectedIssue = issue; showComponent = 'dialog'">Resolve</button>
+        <button class="action-item" (click)="selectedIssue = issue; showComponent = 'edit'">Edit</button>
       </clr-dg-action-overflow>
       <clr-dg-cell>{{issue.issueNo}}</clr-dg-cell>
       <clr-dg-cell>{{issue.type}}</clr-dg-cell>
@@ -21,5 +22,6 @@
     <clr-dg-footer>{{issues.length}} issues</clr-dg-footer>
   </clr-datagrid>
 </ng-container>
-<app-issue-report *ngIf="showReportIssue === true" (formClose)="onCloseReport()"></app-issue-report>
-<app-confirm-dialog *ngIf="selectedIssue" [issueNo]="selectedIssue.issueNo" (confirm)="onConfirm($event)"></app-confirm-dialog>
+<app-issue-report *ngIf="showComponent === 'new'" (formClose)="onCloseReport()"></app-issue-report>
+<app-issue-edit *ngIf="selectedIssue && showComponent === 'edit'" [issue]="selectedIssue" (formClose)="onCloseReport()"></app-issue-edit>
+<app-confirm-dialog *ngIf="selectedIssue && showComponent === 'dialog'" [issueNo]="selectedIssue.issueNo" (confirm)="onConfirm($event)"></app-confirm-dialog>
